--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -74,15 +74,15 @@
                   </app-field-error-display>
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width has-label" [ngClass]="{'has-success':validConfirmPasswordRegister===true}" [ngClass]="displayFieldCss(frmPassword, 'password')">
+                <mat-form-field class="example-full-width has-label" [ngClass]="{'has-success':validConfirmPasswordRegister===true}" [ngClass]="displayFieldCss(frmPassword, 'password_confirmation')">
                   <input type="password"
                   matInput
-                  id="confirmPassword"
+                  id="password_confirmation"
                   placeholder="Confirm Password *"
                   (ngModelChange)="confirmPasswordValidationRegister($event)"
-                  formControlName="confirmPassword">
+                  formControlName="password_confirmation">
                   <app-field-error-display
-                   [displayError]="isFieldValid(frmPassword, 'confirmPassword')" errorMsg="These passwords don't match. Try again!">
+                   [displayError]="isFieldValid(frmPassword, 'password_confirmation')" errorMsg="These passwords don't match. Try again!">
                   </app-field-error-display>
                 </mat-form-field>
               </div>
