--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,8 +26,8 @@
       <div class="collapse" id="collapseExample">
         <ul class="nav">
           <li class="nav-item">
-            <a href="/site/profile" class="nav-link">
-              <span class="sidebar-mini">MP</span>
+            <a routerLink="/site/profile" class="nav-link">
+              <span class="sidebar-mini"><i class="material-icons">face</i></span>
               <span class="sidebar-normal">My Profile</span>
             </a>
           </li>
@@ -38,56 +38,16 @@
             </a>
           </li> -->
           <li class="nav-item">
-            <a href="javascript:void(0)" class="nav-link">
-              <span class="sidebar-mini">S</span>
-              <span class="sidebar-normal">Settings</span>
+            <a routerLink="/changepassword" class="nav-link">
+              <span class="sidebar-mini"><i class="material-icons">lock</i></span>
+              <span class="sidebar-normal">Change Password</span>
             </a>
           </li>
         </ul>
       </div>
     </div>
   </div>
-    <!-- <div *ngIf="isMobileMenu()">
-   <form class="navbar-form">
-      <span class="bmd-form-group">
-        <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="Search...">
-          <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
-            <i class="material-icons">search</i>
-            <div class="ripple-container"></div>
-          </button>
-        </div>
-      </span>
-    </form>
-    <ul class="nav navbar-nav nav-mobile-menu">
-      <li class="nav-item">
-        <a class="nav-link" href="#pablo">
-          <i class="material-icons">dashboard</i>
-          <p>
-            <span class="d-lg-none d-md-block">Stats</span>
-          </p>
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link" href="#pablo" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          <i class="material-icons">notifications</i>
-          <span class="notification">5</span>
-          <p>
-            <span class="d-lg-none d-md-block">Some Actions</span>
-          </p>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Mike John responded to your email</a>
-          <a class="dropdown-item" href="#">You have 5 new tasks</a>
-          <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-          <a class="dropdown-item" href="#">Another Notification</a>
-          <a class="dropdown-item" href="#">Another One</a>
-        </div>
-      </li>
-
-    </ul>
-  </div>  -->
+   
   <ul class="nav">
     <li routerLinkActive="active" *ngFor="let menuitem of menuItems" class="nav-item">
       <!--If is a single link-->
