--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -23,10 +23,10 @@
           <b class="caret"></b>
         </span>
       </a>
-      <div class="collapse" id="collapseExample">
+      <div class="collapse" id="collapseExample" routerLinkActive="active">
         <ul class="nav">
-          <li class="nav-item">
-            <a routerLink="/site/profile" class="nav-link">
+          <li class="nav-item" routerLinkActive="active">
+            <a routerLink="/site/profile" class="nav-link" >
               <span class="sidebar-mini"><i class="material-icons">face</i></span>
               <span class="sidebar-normal">My Profile</span>
             </a>
@@ -37,7 +37,7 @@
               <span class="sidebar-normal">Edit Profile</span>
             </a>
           </li> -->
-          <li class="nav-item">
+          <li class="nav-item" routerLinkActive="active">
             <a routerLink="/changepassword" class="nav-link">
               <span class="sidebar-mini"><i class="material-icons">lock</i></span>
               <span class="sidebar-normal">Change Password</span>
