--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
   </div>
-  <div *ngIf="isMobileMenu()">
+  <!-- <div *ngIf="isMobileMenu()">
     <form class="navbar-form">
       <span class="bmd-form-group">
         <div class="input-group no-border">
@@ -94,7 +94,7 @@
         </a>
       </li>
     </ul>
-  </div>
+  </div> -->
   <ul class="nav">
     <li routerLinkActive="active" *ngFor="let menuitem of menuItems" class="nav-item">
       <!--If is a single link-->
