--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<!-- <div >
+  <img src="../assets/img/Blocks-1s-200px.gif" />
+</div> -->
+<app-loader></app-loader>
 <router-outlet></router-outlet>
