--- a/src/app/admin/crfs/crfs.component.html
+++ b/src/app/admin/crfs/crfs.component.html
@@ -23,7 +23,7 @@
                 </mat-form-field>
               </div>
               <div class="col-md-6">
-                <a href="/admin/crf-add" class="btn btn-success mat-raised-button" mat-raised-button>
+                <a routerLink="/admin/crf-add" class="btn btn-success mat-raised-button" mat-raised-button>
                   <mat-icon>add</mat-icon> Add CRF
                 </a>
               </div>
