--- a/src/app/monitor/monitor-navbar/monitor-navbar.component.html
+++ b/src/app/monitor/monitor-navbar/monitor-navbar.component.html
@@ -14,6 +14,7 @@
       <a class="navbar-brand" href="#">
         <img src="/assets/img/QdataEDC.png" style="width:190px; " />
       </a>
+      <h3 class="nav-item"><i class="now-ui-icons education_hat"></i> {{studyName}} </h3>
     </div>
     <button mat-button class="navbar-toggler btn-no-ripple" type="button" (click)="sidebarToggle()" >
       <span class="sr-only">Toggle navigation</span>
