--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -14,7 +14,7 @@
             <div class="card-footer">
               <div class="stats">
                 <i class="material-icons text-danger">pageview</i>
-                <a [routerLink]="['/patients']" routerLinkActive="router-link-active" >View Patients</a>
+                <a routerLink='/site/patients' routerLinkActive="router-link-active" >View Patients</a>
               </div>
             </div>
           </div>
