--- a/src/app/site/patient-list/patient-list.component.html
+++ b/src/app/site/patient-list/patient-list.component.html
@@ -7,14 +7,46 @@
               <div class="card-icon">
                 <i class="material-icons">assignment_ind</i>
               </div>
-              <h4 class="card-title ">Enrolled Patients</h4>
+              <h4 class="card-title ">Enrolled Patients
               <span class="pull-right">
                 <a [routerLink]="['/site/patient/new']" class="btn btn-primary " mat-raised-button type="button" >
-                  <i class="material-icons">add_box</i>Add</a></span>
+                  <i class="material-icons">add_box</i>Add</a></span></h4>
             </div>
             <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-hover">
+              <div class="table-responsive mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" class="table ">
+                  <ng-container matColumnDef="patid">
+                    <th mat-header-cell *matHeaderCellDef> Patient ID </th>
+                    <td mat-cell *matCellDef="let patient"> {{getRefNumber(patient.pat_id, patient.prefix)}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="initials">
+                    <th mat-header-cell *matHeaderCellDef> Initials</th>
+                    <td mat-cell *matCellDef="let patient"> {{patient.initials}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="dob">
+                      <th mat-header-cell *matHeaderCellDef> Date of Birth</th>
+                      <td mat-cell *matCellDef="let patient"> {{patient.dob | date}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="enrollment">
+                        <th mat-header-cell *matHeaderCellDef>Enrollment Date</th>
+                        <td mat-cell *matCellDef="let patient"> {{patient.icf_date | date}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="actions">
+                          <th mat-header-cell *matHeaderCellDef class="text-right">Action</th>
+                          <td mat-cell class="td-actions text-right" *matCellDef="let patient">
+                            <a mat-raised-button type="button" class="btn btn-info ">
+                              <i class="material-icons">person</i>
+                            </a>
+                          <a routerLink="/site/patient/{{patient._id}}" mat-raised-button type="button" class="btn btn-success " >
+                              <i class="material-icons">edit</i>
+                          </a> </td>
+                        </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
+
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+                <!-- <table class="table table-hover">
                   <thead class="text-primary">
                     <tr><th>Patient ID</th>
                       <th>Initials</th>
@@ -42,7 +74,7 @@
                       </td>
                     </tr>
                   </tbody>
-                </table>
+                </table> -->
               </div>
             </div>
           </div>
