--- a/src/app/admin/manage-visit/manage-visit.component.html
+++ b/src/app/admin/manage-visit/manage-visit.component.html
@@ -12,6 +12,7 @@
           </div>
           <div class="card-body">
             <br/>
+           
             <div class="row">
               <div class="col-md-6">
                 <mat-form-field>
@@ -72,33 +73,38 @@
             <div class="card-icon">
               <i class="material-icons">pets</i>
             </div>
-            <h4 class="card-title ">Visits</h4>
-            <span class="text-right">
+            <h4 class="card-title ">Visits <span class="text-right">
                 <a [routerLink]="['/admin/visit/new']" class="btn btn-primary " mat-raised-button type="button">
-                  <i class="material-icons">add_box</i>Add</a></span>
+                  <i class="material-icons">add_box</i>Add</a></span></h4>
           </div>
           <div class="card-body">
-              <div class="table-responsive">
-            <table class="table  table-hover">
-              <thead class="text-rose">
-                <tr><th>Code</th><th>Visit Name</th><th>Study</th>
-                  <th class="text-right">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let visit of visits">
-                  <td>{{visit.code}}</td>
-                  <td>{{visit.description}}</td>
-                  <td>{{visit.study.name}}</td>
-                  <td class="text-right">
-                    <a href="admin/visit/edit/{{visit._id}}" class="btn btn-icon btn-danger" mat-raised-button >
-                      <i class="material-icons">edit</i>
-                    </a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            </div>
+              <div class="table-responsive ">
+                  <table mat-table class="table table-hover" [dataSource]="dataSource">
+                    <ng-container matColumnDef="code">
+                      <th mat-header-cell *matHeaderCellDef class="text-rose"> Code </th>
+                      <td mat-cell *matCellDef="let visit"> {{visit.code}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="description">
+                        <th mat-header-cell *matHeaderCellDef class="text-rose"> Visit Name</th>
+                        <td mat-cell *matCellDef="let visit"> {{visit.description}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="study">
+                          <th mat-header-cell *matHeaderCellDef class="text-rose"> Study</th>
+                          <td mat-cell *matCellDef="let visit"> {{visit.study.name}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="actions">
+                          <th mat-header-cell *matHeaderCellDef class="text-right text-rose">Action</th>
+                          <td mat-cell class="td-actions text-right" *matCellDef="let visit">
+                            <a routerLink="/admin/visit/edit/{{visit._id}}" mat-raised-button class="btn btn-icon btn-danger" >
+                              <i class="material-icons">edit</i>
+                            </a>
+                          </td>
+                          </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumn" ></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
+                  </table>
+                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+                </div>
           </div>
         </div>
       </div>
