--- a/src/app/admin/studies/studies.component.html
+++ b/src/app/admin/studies/studies.component.html
@@ -7,27 +7,39 @@
               <div class="card-icon">
                 <i class="material-icons">school</i>
               </div>
-              <h4 class="card-title ">Studies</h4>
-              <span class="pull-right">
-                <a [routerLink]="['/admin/study/new']" class="btn btn-primary " mat-raised-button type="button" >
-                  <i class="material-icons">add_box</i>Add</a></span>
+              <h4 class="card-title ">Studies <span class="pull-right">
+                  <a [routerLink]="['/admin/study/new']" class="btn btn-primary " mat-raised-button type="button" >
+                    <i class="material-icons">add_box</i>Add</a></span></h4>
+              
             </div>
             <div class="card-body">
               <div class="table-responsive">
-                  <table class="table table-hover">
-                    <thead class="text-primary">
-                      <tr><th>Study Name</th><th>Description</th><th>Sites</th><th>Action</th></tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor='let study of studies'>
-                        <td>{{study.name}}</td><td>{{study.description}}</td>
-
-                        <td><span *ngFor='let site of study.sites'>
-                          {{site.name}} ,</span></td>
-                        <td></td>
-                      </tr>
-                    </tbody>
-                    </table>
+                <table mat-table class="table table-hover" [dataSource]="dataSource">
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef class="text-rose">Study Name</th>
+                        <td mat-cell *matCellDef="let study">{{study.name}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="description">
+                          <th mat-header-cell *matHeaderCellDef class="text-rose">Description</th>
+                          <td mat-cell *matCellDef="let study">{{study.description}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="site">
+                            <th mat-header-cell *matHeaderCellDef class="text-rose">Sites</th>
+                            <td mat-cell *matCellDef="let study"><span *ngFor='let site of study.sites'>
+                                {{site.name}},<br></span></td>
+                          </ng-container> 
+                          <ng-container matColumnDef="actions">
+                              <th mat-header-cell *matHeaderCellDef class="text-right text-rose">Action</th>
+                              <td mat-cell class="td-actions text-right" *matCellDef="let visit">
+                                <a routerLink="/admin/visit/edit/{{visit._id}}" mat-raised-button class="btn btn-icon btn-danger" >
+                                  <i class="material-icons">edit</i>
+                                </a>
+                              </td>
+                              </ng-container>  
+                    <tr mat-header-row *matHeaderRowDef="displayedColumn" ></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
               </div>
 
             </div>
